kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: homework
  labels:
    app: web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: nginx-webserver
        image: nginx:1.25
        # ports:
        # - containerPort: 8000
        lifecycle:
          postStart:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - |
                  rm -f /usr/share/nginx/html/index.html
                  find /homework -type f -exec ln -s {} /usr/share/nginx/html \;
          preStop:
            exec:
              command: ["/bin/sh","-c","rm /homework/index.html"]
        volumeMounts:
        - name: work-dir
          mountPath: /homework
        readinessProbe:
          exec:
            command: ["cat", "/homework/index.html"]
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: work-dir
        emptyDir: {}

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
